# al-jabr

./: .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: array.rs  column_vector.rs  lib.rs  matrix.rs  point.rs  rotation.rs  row_view.rs  vector.rs
tests/: macro_tests.rs  serde_tests.rs
