[package]
name = "aljabar"
version = "1.0.0"
authors = ["Matthew Plant <map@maplant.com>", "Øystein Hovind <oystein.hovind@folq.no>"]
edition = "2018"
description = "A super generic, super experimental linear algebra library."
license = "MIT/Apache-2.0"

documentation = "https://docs.rs/crate/aljabar"
homepage = "https://github.com/maplant/aljabar"
repository = "https://github.com/maplant/aljabar"
readme = "README.md"

keywords = [ "linear", "algebra", "matrix", "vector", "math" ]

[lib]
name = "aljabar"

[dependencies]
mint = { version = "0.5", optional = true }
paste = "0.1"
rand = { version = "0.7", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
smallvec = "0.6"

[features]
default = []
swizzle = []

[[test]]
name = "serde_tests"
path = "tests/serde_tests.rs"
required-features = ["serde"]

[dev-dependencies]
serde_json = "1.0"
approx = "0.3.2"

[package.metadata.docs.rs]
# No need ot clutter docs.rs with the mint converters.
features = [ "swizzle", "serde", "rand" ]