[package]
name = "al-jabr"
version = "0.4.1"
authors = ["Matthew Plant <map@maplant.com>", "Øystein Hovind <oystein.hovind@folq.no>"]
edition = "2021"
description = "An n-dimensional linear algebra library."
license = "MIT/Apache-2.0"

documentation = "https://docs.rs/crate/al-jabr"
homepage = "https://github.com/maplant/al-jabr"
repository = "https://github.com/maplant/al-jabr"
readme = "README.md"

keywords = [ "linear", "algebra", "matrix", "vector", "math" ]

[lib]
name = "al_jabr"

[dependencies]
mint = { version = "0.5", optional = true }
paste = "0.1"
rand = { version = "0.7", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
approx = { version = "0.4", optional = true }
smallvec = "0.6"

[features]
default = []
swizzle = []

[[test]]
name = "serde_tests"
path = "tests/serde_tests.rs"
required-features = ["serde"]

[dev-dependencies]
serde_json = "1.0"
approx = "0.4"

[package.metadata.docs.rs]
# No need ot clutter docs.rs with the mint converters.
features = [ "swizzle", "serde", "rand" ]