[package]
name = "al-jabr"
version = "0.6.0"
authors = ["Matthew Plant <maplant@protonmail.com>", "Øystein Hovind <oystein.hovind@folq.no>"]
edition = "2021"
description = "An n-dimensional linear algebra library."
license = "MIT/Apache-2.0"

documentation = "https://docs.rs/crate/al-jabr"
homepage = "https://github.com/maplant/al-jabr"
repository = "https://github.com/maplant/al-jabr"
readme = "README.md"

keywords = [ "linear", "algebra", "matrix", "vector", "math" ]

[lib]
name = "al_jabr"

[dependencies]
mint = { version = "0.5", optional = true }
paste = { version = "0.1", optional = true }
rand = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
approx = { version = "0.5", optional = true }

[features]
default = []
swizzle = [ "dep:paste" ]

[[test]]
name = "serde_tests"
path = "tests/serde_tests.rs"
required-features = ["serde"]

[dev-dependencies]
serde_json = "1"
approx = "0.5"

[package.metadata.docs.rs]
# No need to clutter docs.rs with the mint converters.
features = [ "swizzle", "serde", "rand" ]
